phone and website icons; link color change (contrast fix)

--- a/site/themes/s2b_hugo_theme/static/css/custom.css
+++ b/site/themes/s2b_hugo_theme/static/css/custom.css
@@ -28,3 +28,11 @@ header {
 #navbar svg.logo {
   fill: currentColor;
 }
+
+a {
+  color: #337ab7;
+}
+
+a:hover, a:focus {
+  color: #23527c;
+}
